resolved alignment issue inside after login

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   color: #475f7b;
   font-size: 1rem;
   font-style: normal;
